Add Product Controller CRUD, add StoreRequest and UpdateRequest for Product
