# app/Http/Requests/Category/UpdateRequest.php
@@ -1,0 +1,42 @@
+<?php
+
+namespace App\Http\Requests\Category;
+
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Support\Str;
+
+class UpdateRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Prepare the data for validation.
+     */
+    protected function prepareForValidation(): void
+    {
+        $this->merge([
+            'slug' => Str::slug($this->title),
+        ]);
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\Rule|array|string>
+     */
+    public function rules(): array
+    {
+        $categoryUuid = request()->category; //see api route apiResource for CategoryController
+
+        return [
+            'title' => ['required', 'string', 'max:100'],
+            'slug' => ['required', 'string', 'unique:categories,slug,'.$categoryUuid.',uuid']
+        ];
+    }
+}
