# app/Http/Requests/Product/UpdateRequest.php
@@ -3,7 +3,6 @@
 namespace App\Http\Requests\Product;
 
 use Illuminate\Foundation\Http\FormRequest;
-use Illuminate\Support\Str;
 
 class UpdateRequest extends FormRequest
 {
@@ -16,27 +15,17 @@ class UpdateRequest extends FormRequest
     }
 
     /**
-     * Prepare the data for validation.
-     */
-    protected function prepareForValidation(): void
-    {
-        $this->merge([
-            'slug' => Str::slug($this->title),
-        ]);
-    }
-
-    /**
      * Get the validation rules that apply to the request.
      *
      * @return array<string, \Illuminate\Contracts\Validation\Rule|array|string>
      */
     public function rules(): array
     {
-        $categoryUuid = request()->category; //see api route apiResource for CategoryController
-
         return [
-            'title' => ['required', 'string', 'max:100'],
-            'slug' => ['required', 'string', 'unique:categories,slug,'.$categoryUuid.',uuid']
+            'category_uuid' => ['required', 'exists:categories,uuid'],
+            'title' => ['required', 'string'],
+            'price' => ['required', 'numeric'],
+            'description' => ['required', 'string'],
         ];
     }
 }
